Added Smiley face

--- a/style/main.css
+++ b/style/main.css
@@ -20,7 +20,7 @@ h1.title {
   font-weight: bold;
   margin: 0;
   display: block;
-  float: left; }
+  float: right; }
 
 @-webkit-keyframes move-up {
   0% {
@@ -314,9 +314,12 @@ hr {
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
     background: #eee4da;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    background: url('../imgs/Sun.jpg');
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
+    background-size: 100%; }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
+    background: url('../imgs/Sun.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
