--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,11 @@ html, body {
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
 
+div {
+  padding: 20px;
+  background-color: blue;
+  margin: 10px;
+}
 body {
   margin: 80px 0; }
 
